--- a/src/styles2.css
+++ b/src/styles2.css
@@ -1,56 +1,6 @@
 * {
-  margin: 0px;
-  padding: 0px;
-}
-@import url("https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@700&display=swap");
-#FAQ {
-  background-image: url("resources/bg5.jpg");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  width: 100%;
-  text-align: center;
-  padding-bottom: 20px;
-}
-#FAQ button {
-  width: 700px;
-  height: 70px;
-  font-size: 23px;
-  text-align: left;
-  padding-left: 15px;
-  margin: 5px 0;
-  background-color: pink;
-  border-radius: 10px;
-  font-family: "Fuzzy Bubbles", cursive;
-}
-#FAQ h1 {
-  font-family: "Fuzzy Bubbles", cursive;
-  font-size: 60px;
-  color: #ff4cf8;
-}
-
-/* #Navbar {
-  position: "fixed";
-  display: "grid";
-  background: "#222222";
-  width: "100%";
-  height: "90px";
-}
-#Navbar img {
-  height: "70%";
-}
-#Navbar button {
-  background-color: "#db4dce";
-  color: "white";
-  width: "100px";
-  height: "40px";
-  border-radius: "5px";
-  position: "absolute";
-  margin: "20px";
-  right: "20px";
-} */
-
-
-* {
+  margin: 0;
+  padding: 0;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
@@ -60,7 +10,7 @@ body {
   background-position: top;
 }
 
-#login input {
+input {
   height: 60px;
   width: 300px;
   padding: 0 10px 0 20px;
@@ -71,7 +21,7 @@ body {
   margin: 10px;
 }
 
-#login button {
+button {
   cursor: pointer;
   font-size: 20px;
   background-color: hotpink;
@@ -80,7 +30,7 @@ body {
   border-radius: 10px;
 }
 
-#login {
+.login_form {
   background-color: rgba(195, 65, 255, 0.295);
   height: 550px;
   width: 400px;
@@ -109,7 +59,7 @@ body {
   margin-left: -220px;
 }
 
-#login p {
+p {
   color: rgb(0, 0, 0);
   font-size: 18px;
 }
