--- a/src/Components.css
+++ b/src/Components.css
@@ -1,8 +1,104 @@
+/* overall styling */
 * {
   margin: 0px;
   padding: 0px;
 }
 @import url("https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@700&display=swap");
+/* --------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+
+/* welcome styling */
+.welcome
+{
+  background-color: #3f053a; 
+}
+
+
+.welcome img
+{
+  width: 100%;
+  height: 800px;
+  opacity: 50%;
+}
+.welcome center
+{
+  position:absolute;
+  margin-left:445px;
+  margin-top: -445px;
+}
+
+.welcome p
+{
+  font-size: 30px;
+  color: white;
+  font-family:Netflix Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+
+.welcome input
+{
+  width:400px;
+  height: 50px;
+  padding: 0px 10px;
+  border-radius:10px;
+  font-size: 18px;
+}
+
+.welcome button
+{
+  background-color: #db4dce;
+  color: white;
+  width:130px;
+  margin-left: 30px;
+  height: 50px;
+  border-radius: 10px;
+}
+
+/* --------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+/* styling slide1 */
+.slide
+{
+  height:350px;
+  background-color:black;
+}
+
+
+.slide p
+{
+  color: white;
+  position:absolute;
+  padding: 100px;
+  display: inline-block;
+  margin-top: 60px;
+  font-size:30px;
+  font-family:Netflix Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+
+/* --------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+/* styling slide1 */
+
+.slide1
+{
+  background-color: black;
+  height: 450px;
+}
+
+.slide1 img
+{
+  width:600px;
+}
+
+.slide1 p
+{
+  color:white;
+  position: absolute;
+  padding: 100px;
+  margin-top: 100px;
+  display:inline-block;
+  font-size: 30px;
+  font-family:Netflix Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+/* --------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+/* styling faq */
+
 #FAQ {
   background-image: url("resources/bg5.jpg");
   background-repeat: no-repeat;
@@ -28,6 +124,14 @@
   color: #ff4cf8;
 }
 
+/* --------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+/* styling divider */
+.divider
+{
+  height:10px;
+  background-color:grey;
+}
+
 /* #Navbar {
   position: "fixed";
   display: "grid";
@@ -49,6 +153,7 @@
   right: "20px";
 } */
 
+/* --------------------------------------------------------------------------------------------------------------------------------------------------------------- */
 
 * {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
