added routing to the pages and made some small changes

--- a/src/HomePage/FAQ/FAQ.css
+++ b/src/HomePage/FAQ/FAQ.css
@@ -1,22 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@700&display=swap");
-/* --------------------------------------------------------------------------------------------------------------------------------------------------------------- */
-
-/* welcome styling */
-
-
-/* --------------------------------------------------------------------------------------------------------------------------------------------------------------- */
-/* styling slide1 */
-
-
-/* --------------------------------------------------------------------------------------------------------------------------------------------------------------- */
-/* styling slide1 */
-
-
-/* --------------------------------------------------------------------------------------------------------------------------------------------------------------- */
-/* styling faq */
-
 #FAQ {
-  background-image: url("/home/nishanth/wt_project-1/src/images/bg5.jpg");
+  background-image: url("../../images/bg5.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   width: 100%;
