--- a/src/ForgotPassword/ForgotPassword.css
+++ b/src/ForgotPassword/ForgotPassword.css
@@ -1,12 +1,11 @@
 #forgotpassword {
-    background-color: rgb(100, 3, 156);
-    background-image: url("/home/nishanth/wt_project/src/images/bg5.jpg");
+    background-image: url("../images/bg5.jpg");
     background-size: 100vw;
     height: 80vh;
     padding-top: 10vh;
   }
   #form {
-    background-color: rgba(253, 155, 245, 0.329);
+    background-color: rgba(195, 65, 255, 0.295);
     border-radius: 15px;
     width: fit-content;
     height: 400px;
@@ -14,30 +13,26 @@
     margin: auto;
   }
   #form button {
-    width: 200px;
+    width: 170px;
     cursor: pointer;
     height: 50px;
     font-size: larger;
-    /* background-color: rgb(255, 93, 247); */
     background-color: rgba(134, 206, 211, 0.801);
     color: rgba(255, 255, 255, 0.788);
-    border-width: 0px;
     border-radius: 10px;
-    border-width: 2px;
-    /* border-color: rgb(187, 72, 172); */
   }
   #title {
     font-size: 40px;
     color: #3f053a;
   }
   #forgotpassword input {
-    font-size: larger;
-    border-radius: 10px;
+    font-size: large;
+    border-radius: 5px;
     border-width: 0px;
-    height: 50px;
-    padding: 0px 10px;
+    height: 60px;
+    padding-left:  20px;
     width: 380px;
-    background-color: rgb(252, 207, 253);
+    background-color: rgb(236, 162, 255);
   }
   #text {
     font-size: larger;
