added footer and navbar to faq page and contacts page and styled footer.

--- a/src/HomePage/WelcomeSlide/WelcomeSlide.css
+++ b/src/HomePage/WelcomeSlide/WelcomeSlide.css
@@ -6,6 +6,8 @@
 .welcome p {
   font-size: 30px;
   color: white;
+  background-color: rgba(0, 0, 0, 0.69);
+  width: fit-content;
 }
 
 .welcome input {
@@ -31,14 +33,14 @@
 }
 
 .welcome {
-  background-image: url("../../images/netflix_sl1_bg.jpg");
+  background-image: url("../../images/netflix_bg_2.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 760px;
 }
 .welcome center {
-  background-color: rgba(105, 14, 138, 0.418);
+  background-color: rgba(47, 5, 75, 0.6);
   height: 760px;
   padding-top: 200px;
 }
