--- a/src/ForgotPassword/ForgotPassword.css
+++ b/src/ForgotPassword/ForgotPassword.css
@@ -1,44 +1,49 @@
 #forgotpassword {
-    background-image: url("../images/bg5.jpg");
-    background-size: 100vw;
-    height: 80vh;
-    padding-top: 10vh;
-  }
-  #form {
-    background-color: rgba(195, 65, 255, 0.295);
-    border-radius: 15px;
-    width: fit-content;
-    height: 400px;
-    width: 600px;
-    margin: auto;
-  }
-  #form button {
-    width: 170px;
-    cursor: pointer;
-    height: 50px;
-    font-size: larger;
-    background-color: rgba(134, 206, 211, 0.801);
-    color: rgba(255, 255, 255, 0.788);
-    border-radius: 10px;
-  }
-  #title {
-    font-size: 40px;
-    color: #3f053a;
-  }
-  #forgotpassword input {
-    font-size: large;
-    border-radius: 5px;
-    border-width: 0px;
-    height: 60px;
-    padding-left:  20px;
-    width: 380px;
-    background-color: rgb(236, 162, 255);
-  }
-  #text {
-    font-size: larger;
-    color: #3f053a;
-  }
-  #text_container {
-    margin-left: 50px;
-  }
-  
+  background-image: url("../images/bg5.jpg");
+  background-size: 100vw;
+  height: 80vh;
+  padding-top: 10vh;
+}
+
+#forgotpassword form {
+  background-color: rgba(195, 65, 255, 0.308);
+  border-radius: 15px;
+  width: fit-content;
+  height: 400px;
+  width: 600px;
+  margin: auto;
+}
+
+#forgotpassword button {
+  width: 170px;
+  cursor: pointer;
+  height: 50px;
+  font-size: larger;
+  background-color: rgba(134, 206, 211, 0.801);
+  color: rgb(255, 255, 255);
+  border-radius: 10px;
+}
+
+#forgotpassword #title {
+  font-size: 40px;
+  color: #3f053a;
+}
+
+#forgotpassword input {
+  font-size: large;
+  border-radius: 5px;
+  border-width: 0px;
+  height: 60px;
+  padding-left: 20px;
+  width: 380px;
+  background-color: rgb(236, 162, 255);
+}
+
+#forgotpassword #text {
+  font-size: larger;
+  color: #3f053a;
+}
+
+#forgotpassword #text_container {
+  margin-left: 50px;
+}
