--- a/src/SignUp/SignUp.css
+++ b/src/SignUp/SignUp.css
@@ -1,65 +1,65 @@
 #signup {
-    background-color: rgb(100, 3, 156);
-    background-image: url("../images/bg5.jpg");
-    background-size: 100vw;
-    height: 85vh;
-    padding-top: 5vh;
-  }
-  #signup_form {
-    background-color: rgba(195, 65, 255, 0.295);
-    border-radius: 15px;
-    width: fit-content;
-    height: 530px;
-    padding: 0 40px;
-    margin: auto;
-  }
-  #signup_form h1 {
-    padding-top: 25px;
-    font-size: 30px;
-    color: #3f053a;
-  }
-  #signup_form text {
-    justify-self: center;
-  }
-  #signup_form button {
-    width: 150px;
-    cursor: pointer;
-    height: 50px;
-    font-size: larger;
-    background-color: rgba(134, 206, 211, 0.801);
-    color: rgba(255, 255, 255, 0.788);
-    /* background-color: rgb(255, 93, 247); */
-    border-width: 0px;
-    border-radius: 10px;
-    border-width: 2px;
-    /* border-color: rgb(187, 72, 172); */
-  }
-  .signup {
-    cursor: pointer;
-    font-size: 20px;
-    background-color: rgba(134, 206, 211, 0.801);
-    color: rgba(255, 255, 255, 0.788);
-    padding: 10px 40px 35px 40px;
-    border-radius: 10px;
-    width: fit-content;
-  }
-  .content {
-    background-color: rgba(195, 65, 255, 0.295);
-    border-radius: 10px;
-    margin-top: 70px;
-    padding: 30px 0px;
-    justify-self: center;
-    text-align: center;
-    height: 490px;
-    width: 400px;
-  }
-  #signup_form input {
-    margin: 20px 0px;
-    width: 300px;
-    height: 60px;
-    border-radius: 5px;
-    background-color: rgb(236 162 255);
-    border: 0px;
-    font-size: large;
-    padding: 0 10px;
-  }
+  background-color: rgb(100, 3, 156);
+  background-image: url("../images/bg5.jpg");
+  background-size: 100vw;
+  height: 85vh;
+  padding-top: 5vh;
+}
+#signup_form {
+  background-color: rgba(195, 65, 255, 0.295);
+  border-radius: 15px;
+  width: fit-content;
+  height: 530px;
+  padding: 0 40px;
+  margin: auto;
+}
+#signup_form h1 {
+  padding-top: 10px;
+  font-size: 30px;
+  color: #3f053a;
+}
+#signup_form text {
+  justify-self: center;
+}
+#signup_form button {
+  width: 150px;
+  cursor: pointer;
+  height: 50px;
+  font-size: larger;
+  background-color: rgba(134, 206, 211, 0.801);
+  color: rgba(255, 255, 255, 0.788);
+  /* background-color: rgb(255, 93, 247); */
+  border-width: 0px;
+  border-radius: 10px;
+  border-width: 2px;
+  /* border-color: rgb(187, 72, 172); */
+}
+#signup_form .signup {
+  cursor: pointer;
+  font-size: 20px;
+  background-color: rgba(134, 206, 211, 0.801);
+  color: rgba(255, 255, 255, 0.788);
+  padding: 10px 40px 35px 40px;
+  border-radius: 10px;
+  width: fit-content;
+}
+#signup_form .content {
+  background-color: rgba(195, 65, 255, 0.295);
+  border-radius: 10px;
+  margin-top: 70px;
+  padding: 30px 0px;
+  justify-self: center;
+  text-align: center;
+  height: 490px;
+  width: 400px;
+}
+#signup_form input {
+  margin: 20px 0px;
+  width: 300px;
+  height: 60px;
+  border-radius: 5px;
+  background-color: rgb(236 162 255);
+  border: 0px;
+  font-size: large;
+  padding: 0 10px;
+}
