--- a/src/HomePage/FAQ/FAQ.css
+++ b/src/HomePage/FAQ/FAQ.css
@@ -1,25 +1,36 @@
-@import url("https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@700&display=swap");
 #FAQ {
-  background-image: url("../../images/bg5.jpg");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  width: 100%;
+  background-color: black;
   text-align: center;
   padding-bottom: 20px;
 }
 #FAQ button {
   width: 700px;
-  height: 70px;
-  font-size: 23px;
+  height: 60px;
+  font-size: 21px;
   text-align: left;
   padding-left: 15px;
   margin: 5px 0;
   background-color: pink;
   border-radius: 10px;
-  font-family: "Fuzzy Bubbles", cursive;
+  border-width: 0px;
 }
 #FAQ h1 {
-  font-family: "Fuzzy Bubbles", cursive;
   font-size: 60px;
   color: #ff4cf8;
+}
+
+#FAQ .faq_btn {
+  border-radius: 10px;
+  width: 700px;
+  background-color: pink;
+  margin: 3px 0px;
+}
+
+#FAQ .faq_drp_dwn {
+  display: none;
+  font-size: large;
+}
+
+#FAQ .faq_btn:hover .faq_drp_dwn {
+  display: contents;
 }
