downloaded new images and imported them in contact

--- a/frontend/src/HomePage/WelcomeSlide/WelcomeSlide.css
+++ b/frontend/src/HomePage/WelcomeSlide/WelcomeSlide.css
@@ -20,7 +20,7 @@
   border-width: 0px;
 }
 
-.welcome button {
+#signup-button {
   background-color: rgb(131, 32, 224);
   cursor: pointer;
   color: white;
